--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="box">
+		<div id="image">
+			<img src="https://plus.unsplash.com/premium_photo-1684407617257-58c3ba45589d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzMnx8fGVufDB8fHx8fA%3D%3D" alt="product_image">
+		</div>
+		<h1>Pricing Card</h1>
+		<p>Price: Rs.200</p>
+		<p>Description: Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+		<button>Buy Now</button>
+	</div>
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
